--- a/01_Data_Structures.ipynb
+++ b/01_Data_Structures.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMW8DnvS+lMUp/+oZpijPUZ",
+      "authorship_tag": "ABX9TyNAGLJ+/UXUB596VF1Yq5bq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -632,10 +632,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "help(...) funciton is one of the best things in python"
+      ],
+      "metadata": {
+        "id": "sj0z4Gw9o6av"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(l2.append)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xE7CMneXmyAk",
+        "outputId": "58af0a7b-fa38-4485-e983-8a48847ae57e"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function append:\n",
+            "\n",
+            "append(object, /) method of builtins.list instance\n",
+            "    Append object to the end of the list.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Bj26FbzGpY5Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "or we can do:\n",
+        "l2.help?\n"
+      ],
+      "metadata": {
+        "id": "eH4KbZ9xpd-f"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xE7CMneXmyAk"
+        "id": "PluiMaONpj_B"
       },
       "execution_count": null,
       "outputs": []
