--- a/02_Numpy_basics.ipynb
+++ b/02_Numpy_basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxHX6hA+agi2luMCdY9dPe",
+      "authorship_tag": "ABX9TyNJ3RY2eQfZ3LC+secg5GwG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -887,10 +887,10 @@
       ],
       "metadata": {
         "id": "DC016VR6pcNn",
-        "outputId": "c503c08c-f65d-4926-9f40-999d801fe48c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c503c08c-f65d-4926-9f40-999d801fe48c"
       },
       "execution_count": 78,
       "outputs": [
@@ -917,11 +917,11 @@
         "arr[::5]"
       ],
       "metadata": {
-        "id": "H2IO22BgvSit",
-        "outputId": "b2c0bc5f-8844-4171-e989-f4178054c7fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "H2IO22BgvSit",
+        "outputId": "b2c0bc5f-8844-4171-e989-f4178054c7fe"
       },
       "execution_count": 79,
       "outputs": [
@@ -945,11 +945,11 @@
         "arr[::-5]"
       ],
       "metadata": {
-        "id": "W_eob2zEvY1y",
-        "outputId": "97ac1448-24d2-4b96-f968-10a1eb702ea2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W_eob2zEvY1y",
+        "outputId": "97ac1448-24d2-4b96-f968-10a1eb702ea2"
       },
       "execution_count": 80,
       "outputs": [
@@ -974,11 +974,11 @@
         "b"
       ],
       "metadata": {
-        "id": "LI3olKAWvdzf",
-        "outputId": "c2a000f8-d96c-4b0b-8cae-2b8d274f8f9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LI3olKAWvdzf",
+        "outputId": "c2a000f8-d96c-4b0b-8cae-2b8d274f8f9e"
       },
       "execution_count": 81,
       "outputs": [
@@ -1007,11 +1007,11 @@
         "b"
       ],
       "metadata": {
-        "id": "f3sj_KqhweGY",
-        "outputId": "07e752a2-abf6-48d6-e4d7-08ad8e2fecf8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f3sj_KqhweGY",
+        "outputId": "07e752a2-abf6-48d6-e4d7-08ad8e2fecf8"
       },
       "execution_count": 82,
       "outputs": [
@@ -1047,11 +1047,11 @@
         "np.where(arr==40)"
       ],
       "metadata": {
-        "id": "u-0NnjAPw1il",
-        "outputId": "d74da7ec-ce31-473d-f794-c66fb21a20d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u-0NnjAPw1il",
+        "outputId": "d74da7ec-ce31-473d-f794-c66fb21a20d0"
       },
       "execution_count": 84,
       "outputs": [
@@ -1074,11 +1074,11 @@
         "indx"
       ],
       "metadata": {
-        "id": "cU3rGImcw-lT",
-        "outputId": "4e0f6614-c3e4-43c6-8561-b0f7d5a2f228",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cU3rGImcw-lT",
+        "outputId": "4e0f6614-c3e4-43c6-8561-b0f7d5a2f228"
       },
       "execution_count": 85,
       "outputs": [
@@ -1101,11 +1101,11 @@
         "indx"
       ],
       "metadata": {
-        "id": "h-kOnu2hxjJk",
-        "outputId": "3a3cb912-6579-4104-ab14-44d0a412a427",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h-kOnu2hxjJk",
+        "outputId": "3a3cb912-6579-4104-ab14-44d0a412a427"
       },
       "execution_count": 86,
       "outputs": [
@@ -1128,11 +1128,11 @@
         "arr"
       ],
       "metadata": {
-        "id": "hhO3SXlFxm6-",
-        "outputId": "2cdb9673-3320-46b9-e906-42f3496192a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hhO3SXlFxm6-",
+        "outputId": "2cdb9673-3320-46b9-e906-42f3496192a9"
       },
       "execution_count": 87,
       "outputs": [
@@ -1163,11 +1163,11 @@
         "arr"
       ],
       "metadata": {
-        "id": "tzrL8IElxvKx",
-        "outputId": "4769b16b-7fd6-4fb0-f1cc-2f20b9980934",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tzrL8IElxvKx",
+        "outputId": "4769b16b-7fd6-4fb0-f1cc-2f20b9980934"
       },
       "execution_count": 88,
       "outputs": [
@@ -1191,11 +1191,11 @@
         "arr[1,2]"
       ],
       "metadata": {
-        "id": "KOwi-qN-yDP1",
-        "outputId": "1d89d451-2920-4f07-bf6a-8ec284803873",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KOwi-qN-yDP1",
+        "outputId": "1d89d451-2920-4f07-bf6a-8ec284803873"
       },
       "execution_count": 89,
       "outputs": [
@@ -1217,11 +1217,11 @@
         "arr[1,:]"
       ],
       "metadata": {
-        "id": "DNYrnydiyy0c",
-        "outputId": "fd19d062-dfff-45f9-d7c5-43a6343c3f0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DNYrnydiyy0c",
+        "outputId": "fd19d062-dfff-45f9-d7c5-43a6343c3f0c"
       },
       "execution_count": 90,
       "outputs": [
@@ -1243,11 +1243,11 @@
         "arr[:,2]"
       ],
       "metadata": {
-        "id": "fKnHSAkqy3qm",
-        "outputId": "59c3b92b-cd69-4ba4-fcfd-4d7de798a6fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fKnHSAkqy3qm",
+        "outputId": "59c3b92b-cd69-4ba4-fcfd-4d7de798a6fe"
       },
       "execution_count": 91,
       "outputs": [
@@ -1270,11 +1270,11 @@
         "arr"
       ],
       "metadata": {
-        "id": "u6x3donTy5ip",
-        "outputId": "5f0f1596-3512-4114-974a-cbf9f39b7e3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u6x3donTy5ip",
+        "outputId": "5f0f1596-3512-4114-974a-cbf9f39b7e3b"
       },
       "execution_count": 92,
       "outputs": [
@@ -1302,11 +1302,11 @@
         "arr[1:3,2:]"
       ],
       "metadata": {
-        "id": "PbyuVXxazLwG",
-        "outputId": "c32af536-21e2-4c60-c331-bd6aba329a5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PbyuVXxazLwG",
+        "outputId": "c32af536-21e2-4c60-c331-bd6aba329a5a"
       },
       "execution_count": 93,
       "outputs": [
@@ -1332,11 +1332,11 @@
         "arr"
       ],
       "metadata": {
-        "id": "0Qd6KNFwzSyX",
-        "outputId": "69c1348d-3462-4656-df9f-b0996b8c1597",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0Qd6KNFwzSyX",
+        "outputId": "69c1348d-3462-4656-df9f-b0996b8c1597"
       },
       "execution_count": 95,
       "outputs": [
@@ -1367,11 +1367,11 @@
         "arr[[1,15,28]]"
       ],
       "metadata": {
-        "id": "xNgKT4J7FP3o",
-        "outputId": "e0c0e63c-9fd0-4872-da83-033ba7500565",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xNgKT4J7FP3o",
+        "outputId": "e0c0e63c-9fd0-4872-da83-033ba7500565"
       },
       "execution_count": 99,
       "outputs": [
@@ -1405,11 +1405,11 @@
         "arr[arr<-8]"
       ],
       "metadata": {
-        "id": "ApQoi2qwGBH6",
-        "outputId": "6e43b889-e819-4c8b-faa6-2664def2e5f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ApQoi2qwGBH6",
+        "outputId": "6e43b889-e819-4c8b-faa6-2664def2e5f5"
       },
       "execution_count": 105,
       "outputs": [
@@ -1440,11 +1440,11 @@
         "np.where((arr > 2) & (arr < 8))"
       ],
       "metadata": {
-        "id": "C0FhHiNaGoze",
-        "outputId": "27de22a4-21f4-48f4-bf76-717d034ffe5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C0FhHiNaGoze",
+        "outputId": "27de22a4-21f4-48f4-bf76-717d034ffe5f"
       },
       "execution_count": 118,
       "outputs": [
@@ -1476,11 +1476,11 @@
         "arr[(arr<10) & (arr>1)]"
       ],
       "metadata": {
-        "id": "lUyWgb1XHGr0",
-        "outputId": "80a80fb0-d93c-4999-a45f-94012f3a09d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lUyWgb1XHGr0",
+        "outputId": "80a80fb0-d93c-4999-a45f-94012f3a09d5"
       },
       "execution_count": 120,
       "outputs": [
@@ -1495,6 +1495,15 @@
           "execution_count": 120
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Numpy( hstack, vstack, sort )"
+      ],
+      "metadata": {
+        "id": "szHLEFOBMxm9"
+      }
     },
     {
       "cell_type": "code",
