--- a/Basics_of_Pandas.ipynb
+++ b/Basics_of_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSc+hLv9QhG0JvG3iaNP8W",
+      "authorship_tag": "ABX9TyMCwIx9iSmmzCWkPFKLaSbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/mirpouya/Basics-of-ML/blob/main/Basics_of_Pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h1> A brief introduction to Pandas </h1>"
+      ],
+      "metadata": {
+        "id": "GgUP4xxlogmf"
+      }
     },
     {
       "cell_type": "code",
@@ -1582,12 +1591,12 @@
         "data_df.head()"
       ],
       "metadata": {
-        "id": "3qqZy-QPfsQO",
-        "outputId": "2cce76e6-b8e3-40c8-8088-b35b9f34dd10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        }
+        },
+        "id": "3qqZy-QPfsQO",
+        "outputId": "2cce76e6-b8e3-40c8-8088-b35b9f34dd10"
       },
       "execution_count": 30,
       "outputs": [
@@ -1845,11 +1854,11 @@
         "data_df.columns"
       ],
       "metadata": {
-        "id": "YFrt_edUfuYU",
-        "outputId": "4964c3aa-6687-480e-f682-b87c7aea0859",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YFrt_edUfuYU",
+        "outputId": "4964c3aa-6687-480e-f682-b87c7aea0859"
       },
       "execution_count": 31,
       "outputs": [
@@ -1877,11 +1886,11 @@
         "data_df.shape"
       ],
       "metadata": {
-        "id": "MfeBEoYXgWXz",
-        "outputId": "c1d02820-9ec9-4e72-c4f6-175fbfbe53c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MfeBEoYXgWXz",
+        "outputId": "c1d02820-9ec9-4e72-c4f6-175fbfbe53c1"
       },
       "execution_count": 32,
       "outputs": [
@@ -1905,12 +1914,12 @@
         "data_df"
       ],
       "metadata": {
-        "id": "lcIyM1otgt54",
-        "outputId": "18a4ff92-f47c-4743-ce81-5e57df0dfb01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 554
-        }
+        },
+        "id": "lcIyM1otgt54",
+        "outputId": "18a4ff92-f47c-4743-ce81-5e57df0dfb01"
       },
       "execution_count": 34,
       "outputs": [
@@ -2330,12 +2339,12 @@
         "data_df"
       ],
       "metadata": {
-        "id": "3_XJpo4Qg24E",
-        "outputId": "e7316ea2-a9e8-4ccf-8397-bfced5f361df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 537
-        }
+        },
+        "id": "3_XJpo4Qg24E",
+        "outputId": "e7316ea2-a9e8-4ccf-8397-bfced5f361df"
       },
       "execution_count": 35,
       "outputs": [
@@ -2728,11 +2737,11 @@
         "data_df.shape"
       ],
       "metadata": {
-        "id": "ybQC3-Mihd0v",
-        "outputId": "a67d1b36-3919-4458-d0d8-f15c00f05d5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ybQC3-Mihd0v",
+        "outputId": "a67d1b36-3919-4458-d0d8-f15c00f05d5a"
       },
       "execution_count": 36,
       "outputs": [
@@ -2756,12 +2765,12 @@
         "data_df.describe()"
       ],
       "metadata": {
-        "id": "9UhSnyxRhjIQ",
-        "outputId": "3b3c0b88-bb17-4b77-fe26-65ac274e6820",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        }
+        },
+        "id": "9UhSnyxRhjIQ",
+        "outputId": "3b3c0b88-bb17-4b77-fe26-65ac274e6820"
       },
       "execution_count": 37,
       "outputs": [
@@ -3067,12 +3076,12 @@
         "data_df[[\"Deaths\", \"Recovered\", \"Deaths / 100 Cases\", \"Recovered / 100 Cases\"]]"
       ],
       "metadata": {
-        "id": "A9IVNIwRi0x5",
-        "outputId": "f261286b-df71-462c-a2a0-150be98c243e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "A9IVNIwRi0x5",
+        "outputId": "f261286b-df71-462c-a2a0-150be98c243e"
       },
       "execution_count": 38,
       "outputs": [
@@ -3294,12 +3303,12 @@
         "data_df[[\"Deaths\", \"Recovered\", \"Deaths / 100 Cases\", \"Recovered / 100 Cases\"]].describe()"
       ],
       "metadata": {
-        "id": "nvfLUlocjJsU",
-        "outputId": "55ecd7b8-b48f-45d9-bd3e-99faa71b2ca7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "nvfLUlocjJsU",
+        "outputId": "55ecd7b8-b48f-45d9-bd3e-99faa71b2ca7"
       },
       "execution_count": 39,
       "outputs": [
@@ -3496,11 +3505,11 @@
         "data_df.info()"
       ],
       "metadata": {
-        "id": "SNV1tPIHjMs9",
-        "outputId": "51752d61-4719-49ab-8fb7-c6075d646678",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SNV1tPIHjMs9",
+        "outputId": "51752d61-4719-49ab-8fb7-c6075d646678"
       },
       "execution_count": 40,
       "outputs": [
@@ -3541,12 +3550,12 @@
         "covid_data.head()"
       ],
       "metadata": {
-        "id": "0dprkc4PkNxd",
-        "outputId": "de085a88-db9e-4999-db1d-f1cd215cdf60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
-        }
+        },
+        "id": "0dprkc4PkNxd",
+        "outputId": "de085a88-db9e-4999-db1d-f1cd215cdf60"
       },
       "execution_count": 46,
       "outputs": [
@@ -3797,11 +3806,11 @@
         "covid_data.info()"
       ],
       "metadata": {
-        "id": "pJaqv9S8ldfT",
-        "outputId": "b43270d4-34fb-4349-df9e-59dd234e2a82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pJaqv9S8ldfT",
+        "outputId": "b43270d4-34fb-4349-df9e-59dd234e2a82"
       },
       "execution_count": 47,
       "outputs": [
