--- a/Basics_of_Scikit_Learn.ipynb
+++ b/Basics_of_Scikit_Learn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMScM/088V/UTD5z1O5UMot",
+      "authorship_tag": "ABX9TyMXoe0gqBi7RqUj40vh5ek2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,9 +276,74 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Random Forest clasifier\n",
+        "\n",
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
       "metadata": {
         "id": "NEXCEVHnG1xm"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = RandomForestClassifier(n_estimators=20)\n",
+        "model.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cQScZPdDIPlH",
+        "outputId": "d51c57a6-9ecd-4d21-947e-72bdb102da15"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(n_estimators=20)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "acc = 100*np.sum(y_pred == y_test)/y_test.size\n",
+        "print(\"Accuracy is {}%\".format(acc))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9kpZS_hlIcTU",
+        "outputId": "17b5b6ec-01d7-4cff-fb58-ef73667a3edb"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy is 96.36363636363636%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wqY1wyXNIvqe"
       },
       "execution_count": null,
       "outputs": []
